tests/neg/i22822.scala
def main =
    def x = 3
    x = 4 // error
